# COMP4102-Project

./: .gitignore  .gitmodules  COMP4102_project_proposal_2021.pdf:Zone.Identifier  README.md
docs/: .gitignore  References.bib  template_base.tex  title_base.tex
docs/01-Proposal/: Background.tex  COMP4102-Proposal.tex  Challenge.tex  GoalsDeliverables.tex  ProposalBib.bib  Schedule.tex  Summary.tex
docs/02-FinalWriteUp/: Abstract.tex  Approach.tex  Background.tex  FinalWriteUp.tex  GitHub.tex  Introduction.tex  List-of-Work.tex  Results.tex
src/: AutomtiveSafetySuite  CMakeLists.txt  EyeTrackTest  README.md  main.cpp
src/.cmake/api/v1/reply/: cache-v2-66b56659d633a5249236.json  cache-v2-7c66c8a39f4c91602df1.json  cache-v2-a6b69b773d2f0f9503a6.json  cmakeFiles-v1-0a8d48aa674798186e79.json  cmakeFiles-v1-2e5adc71bd84cf8dc65b.json  cmakeFiles-v1-48297e5568892c5bd691.json  cmakeFiles-v1-f6ad9328f50c3134db96.json  codemodel-v2-0770c21e9d204f126fce.json  codemodel-v2-54c0c7104e31ae324a0b.json  codemodel-v2-6c830f713cba81603ff7.json  codemodel-v2-eb1ec834f54d32f092be.json  codemodel-v2-eeb08771dd59ce30664e.json  codemodel-v2-febfe10ef143033d4f6e.json  index-2021-03-24T00-49-20-0436.json  index-2021-04-11T13-33-46-0865.json  index-2021-04-14T20-28-50-0131.json  index-2021-04-15T13-44-28-0573.json  index-2021-04-16T01-11-09-0969.json  index-2021-04-17T18-30-59-0237.json  target-AutomtiveSafetySuite-6c8d684c5625291e7e10.json  target-AutomtiveSafetySuite-8e3f46421841c3cbbd9d.json  target-AutomtiveSafetySuite-9ce63c371eb7628cbffb.json  target-AutomtiveSafetySuite-9ee64beb68ceea21038c.json  target-AutomtiveSafetySuite-a3e4c706d5b3b8481bd4.json  target-AutomtiveSafetySuite-d8a6c8ee6006b1da2728.json  target-AutomtiveSafetySuite_autogen-3f14d1e93c04fd1806a6.json
src/AutomtiveSafetySuite_autogen/: moc_predefs.h  mocs_compilation.cpp
src/EyeTracking/: EyeTracking.cpp  EyeTracking.h  EyeTracking.hpp  EyeTrackingTest.cpp
src/GUI/: CMakeLists.txt  GUI  camera.cpp  camera.h  camera.qrc  camera.ui  cameraview.cpp  cameraview.h  cameraview.ui  customvideowidget.cpp  customvideowidget.h  customvideowidgetsurface.cpp  customvideowidgetsurface.h  main.cpp  userhelpdialog.cpp  userhelpdialog.h  userhelpdialog.ui
src/GUI/GUI_autogen/: moc_predefs.h
src/PedTracking/: CMakeLists.txt  PedTrackTest  PedTracking.cpp  PedTracking.h  PedTracking.hpp  PedTrackingTest.cpp
src/SignTracking/: CMakeLists.txt  ModelTrainer.py  SignTracking.cc  SignTracking.h  SignTrackingTest  notes.txt  sign_detector.yml  svm_data.xml
src/shared/: eyetrackingstate.cpp  eyetrackingstate.h  imagepipeline.cpp  imagepipeline.h
